--- a/public/legal/platformTerms.html
+++ b/public/legal/platformTerms.html
@@ -6,6 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nomyx Main Services Agreement</title>
 	<style>
+		html {
+			scroll-behavior: smooth;
+		}
+
 		:root {
 			--primary-color: #2c3e50;
 			--secondary-color: #2980b9;
@@ -170,6 +174,7 @@
 			}
 		}
 	</style>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -1283,6 +1288,11 @@
 			printBtn.style.cssText = 'position: fixed; bottom: 20px; right: 20px; padding: 10px 15px; background: #2980b9; color: white; border: none; border-radius: 4px; cursor: pointer; z-index: 1000;';
 			printBtn.addEventListener('click', () => window.print());
 			document.body.appendChild(printBtn);
+		});
+
+		$(".back-to-top").click(function (e) {
+			e.preventDefault();
+			$("html, body").animate({ scrollTop: 0 }, "slow");
 		});
 	</script>
 </body>
